src/Test/Fixtures/Bad/TypeQualifier/scratchLinearAffineQubit.lf
let scratch linear affine q: qubit = qalloc();
